fix: timeline scrollbar overflow-y changed to auto

--- a/src/components/patient.css
+++ b/src/components/patient.css
@@ -97,7 +97,7 @@
   flex-flow: column nowrap;
   align-items: center; */
   font-size: 13px;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   /* scro */
 }
